# Bulletin_board

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
callboard/: admin.py  models.py  serializers.py  urls.py  views.py
callboard/migrations/: 0001_initial.py
config/: settings.py  urls.py
tests/: conftest.py
tests/callboard/: test_callboard.py
tests/users/: test_users.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
