[tool.poetry]
name = "bulletin board"
version = "0.1.0"
description = "service for placing ads"
authors = ["Sem <semseveryanin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.4.0"
django-filter = "^24.2"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests/*/test_*.py"]
addopts = "--cov=. --cov-report=term-missing --tb=short --cov-config=pyproject.toml"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "config/*",
    "manage.py",
    "*/__init__.py",
    "*/migrations/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
